kubernetes/pod-pvc.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nginx-pod

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: my-storage
          mountPath: /usr/share/nginx/html/data

  volumes:
    - name: my-storage
      persistentVolumeClaim:
        claimName: my-pvc
