kubernetes/headless-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx

spec:
  clusterIP: None

  selector:
    app: nginx

  ports:
    - port: 80
